--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -56,11 +56,10 @@
         <div class="content">
           <span class="close"></span>
           <div class="modal-body">
-            <form
+            <form 
               name="reserve"
               action="index.html"
               method="get"
-              onsubmit="return validate();"
             >
               <div
                 class="formData" data-error="Veuillez entrer 2 caractères ou plus pour le champ du prénom." data-error-visible="false">
@@ -71,7 +70,6 @@
                   id="first"
                   name="first"
                   minlength="2"
-                  required
                 /><br>
               </div>
               <div
@@ -83,7 +81,6 @@
                   id="last"
                   name="last"
                   minlength="2"
-                  required
                 /><br>
               </div>
               <div
@@ -94,7 +91,7 @@
                   type="email"
                   id="email"
                   name="email"
-                  required
+                  
                 /><br>
               </div>
               <div
@@ -105,15 +102,15 @@
                   type="date"
                   id="birthdate"
                   name="birthdate"
-                  required
+                  
                 /><br>
               </div>
               <div
                 class="formData" data-error="Veuillez saisir une valeur numérique." data-error-visible="false">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
+                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99"> 
               </div>
-              <p class="text-label">Quelles villes ?</p>
+              <p class="text-label">Dans quelle ville souhaitez vous participer ?</p>
               <div
                 class="formData" id="locations" data-error="Veuillez sélectionner une ville." data-error-visible="false" >
                 <input
@@ -192,7 +189,7 @@
                   id="checkbox1"
                   checked
                 />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
