Finalisation du JS (Modal fermeture intégrée)

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -211,6 +211,15 @@
           </div>
         </div>
       </div>
+      <div class="successfull-container">
+        <div class="successfull-content">
+          <span class="close" id="close-success"></span>
+          <div class="successfull-modal">
+            <p class="successfull-message">Merci pour votre inscription</p>
+            <button class="btn-confirmation" id="btn-confirmation">Fermer</button>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <p class="copyrights">
