--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
-      <img alt="logo" src="Logo.png" width="auto" height="auto" />
+      <img id="logo" alt="logo" src="Logo.png"  />
     </div>
     <div class="main-navbar">
       
