--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div
                 class="formData"
-                data-error="Veuillez saisir une valeur numérique."
+                data-error="Veuillez saisir une valeur numérique (Max. 99)."
                 data-error-visible="false"
               >
                 <label for="quantity"
