--- a/index.html
+++ b/index.html
@@ -237,13 +237,9 @@
       </div>
       <div class="successfull-container">
         <div class="successfull-content">
-          <span class="close" id="close-success"></span>
-          <div class="successfull-modal">
-            <p class="successfull-message">Merci pour votre inscription</p>
-            <button class="btn-confirmation" id="btn-confirmation">
-              Fermer
-            </button>
-          </div>
+          <span class="close-success"></span>
+          <p class="successfull-message">Merci pour votre inscription</p>
+          <button class="btn-confirmation" id="btn-confirmation">Fermer</button>
         </div>
       </div>
     </main>
